[gd_scene load_steps=7 format=3 uid="uid://cyq0xflwf5g5l"]

[ext_resource type="Shape3D" uid="uid://b45ktjnk8t7tb" path="res://entity/spike/hitbox.tres" id="1_hjqvj"]
[ext_resource type="Script" path="res://entity/button/button.gd" id="1_yt3v4"]
[ext_resource type="ArrayMesh" uid="uid://cv50phhpcyhf0" path="res://entity/button/button_down.obj" id="3_8qtq8"]
[ext_resource type="ArrayMesh" uid="uid://bnqcm3qbet83a" path="res://entity/button/button_up.obj" id="4_6uetx"]
[ext_resource type="ArrayMesh" uid="uid://db4tbltis5p8p" path="res://entity/button/button_up_sticky.obj" id="5_dnqjq"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s3mtr"]
size = Vector3(1, 0.49, 1)

[node name="Button" type="Node3D"]
script = ExtResource("1_yt3v4")
sticky = null

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.271935, 0)
shape = ExtResource("1_hjqvj")

[node name="ButtonDown" type="MeshInstance3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -0.0304323, -0.0246124, 0.029961)
mesh = ExtResource("3_8qtq8")

[node name="ButtonUp" type="MeshInstance3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -0.029217, -0.0246124, 0.0296254)
mesh = ExtResource("4_6uetx")

[node name="ButtonUpSticky" type="MeshInstance3D" parent="."]
transform = Transform3D(0.6, 0, 0, 0, 0.6, 0, 0, 0, 0.6, -0.0329821, 0, 0.0280861)
mesh = ExtResource("5_dnqjq")

[node name="hitbox" type="ShapeCast3D" parent="."]
shape = SubResource("BoxShape3D_s3mtr")
target_position = Vector3(0, 0.25, 0)
collide_with_areas = true
collide_with_bodies = false

[connection signal="area_entered" from="Area3D" to="." method="_on_area_3d_area_entered"]
[connection signal="area_exited" from="Area3D" to="." method="_on_area_3d_area_exited"]
